# hems-nilm-training

./: .gitignore  README.md  pyproject.toml
artifacts/mgru_ofat_s2p/ID_2025-11-10_104202_01/: config.yaml  kpis.json  model.pt  per_device_metrics.csv
artifacts/mgru_ofat_s2p/ID_2025-11-10_104809_02_05_etc/: config.yaml  kpis.json  model.pt  per_device_metrics.csv
artifacts/mgru_ofat_s2p/ID_2025-11-10_105455_03/: config.yaml  kpis.json  model.pt  per_device_metrics.csv
artifacts/mgru_ofat_s2p/ID_2025-11-10_110152_04/: config.yaml  kpis.json  model.pt  normalizer.json  per_device_metrics.csv
artifacts/mgru_ofat_s2p/ID_2025-11-10_111046_06/: config.yaml  kpis.json  model.pt  normalizer.json  per_device_metrics.csv
artifacts/mgru_ofat_s2p/ID_2025-11-10_111929_07/: config.yaml  kpis.json  model.pt  per_device_metrics.csv
artifacts/mgru_ofat_s2p/ID_2025-11-10_112219_09/: config.yaml  kpis.json  model.pt  per_device_metrics.csv
artifacts/mgru_ofat_s2p/ID_2025-11-10_112640_10/: config.yaml  kpis.json  model.pt  per_device_metrics.csv
artifacts/mgru_ofat_s2p/ID_2025-11-10_113055_12/: config.yaml  kpis.json  model.pt  per_device_metrics.csv
artifacts/mgru_ofat_s2p/ID_2025-11-10_113450_13/: config.yaml  kpis.json  model.pt  per_device_metrics.csv
artifacts/mgru_ofat_s2p/ID_2025-11-10_114304_15/: config.yaml  kpis.json  model.pt  per_device_metrics.csv
artifacts/mgru_ofat_s2p/ID_2025-11-10_115002_17/: config.yaml  kpis.json  model.pt  per_device_metrics.csv
artifacts/mgru_ofat_s2p/ID_2025-11-10_115858_18_01/: config.yaml  kpis.json  model.pt  normalizer.json  per_device_metrics.csv
deddiag/: docker-compose.yml
(+199 files in other folders)
